objects/maps__MarkerLayerComponent__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>External ID used by Data Tool to upsert data for demo development purposes</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>maps__BaseObject__c</fullName>
        <label>Base Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__CrossField__c</fullName>
        <label>Cross Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__CrossFilterLogic__c</fullName>
        <label>CrossFilterLogic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__CrossObject__c</fullName>
        <label>Cross Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__GrandparentField__c</fullName>
        <label>Grandparent Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__MarkerLayerRelatedList__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maps Marker Layer Related List</label>
        <referenceTo>maps__MarkerLayerRelatedList__c</referenceTo>
        <relationshipLabel>Filters</relationshipLabel>
        <relationshipName>Maps_Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__MarkerLayer__c</fullName>
        <label>Maps Marker Layer</label>
        <referenceTo>maps__MarkerLayer__c</referenceTo>
        <relationshipLabel>Maps Marker Layer Components</relationshipLabel>
        <relationshipName>Marker_Layer_Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>maps__Operator__c</fullName>
        <label>Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__ParentField__c</fullName>
        <label>Parent Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>maps__MarkerLayerComponent__c</referenceTo>
        <relationshipLabel>Maps Marker Layer Components</relationshipLabel>
        <relationshipName>MarkerLayerComponents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Filter</fullName>
                    <default>true</default>
                    <label>Filter</label>
                </value>
                <value>
                    <fullName>Cross Filter</fullName>
                </value>
                <value>
                    <fullName>Subfilter</fullName>
                </value>
                <value>
                    <fullName>Activity Subfilter</fullName>
                </value>
                <value>
                    <fullName>DeviceLayerVendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__Value2__c</fullName>
        <label>Value2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__Value__c</fullName>
        <label>Value</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Maps Marker Layer Component</label>
    <listViews>
        <fullName>maps__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SQC{000000}</displayFormat>
        <label>Maps Marker Layer Component Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maps Marker Layer Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>